log
Sun 24 Sep 2023 10:14:52 PM UTC: 
 heap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
efb41bc
Sun 24 Sep 2023 10:17:03 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:52: error: used struct type value where scalar is required
   22 |     void* top = (pq->size != 0) ? pq->heapArray[0] ? NULL;
      |                                                    ^
heap.c:22:58: error: expected ‘:’ before ‘;’ token
   22 |     void* top = (pq->size != 0) ? pq->heapArray[0] ? NULL;
      |                                                          ^
Compilation failed
3b30747
Sun 24 Sep 2023 10:17:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:52: error: type mismatch in conditional expression
   22 |     void* top = (pq->size != 0) ? pq->heapArray[0] : NULL;
      |                                                    ^
Compilation failed
33adee5
Sun 24 Sep 2023 10:19:50 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:26:17: error: incompatible types when initializing type ‘void *’ using type ‘heapElem’ {aka ‘struct nodo’}
   26 |     void* top = pq->heapArray[0];
      |                 ^~
Compilation failed
9a6e41e
Sun 24 Sep 2023 10:21:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:26:5: error: cannot convert to a pointer type
   26 |     void* top = (void*)pq->heapArray[0];
      |     ^~~~
Compilation failed
fec6498
